--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -27,7 +27,7 @@ jobs:
         run: npm install -g serverless
 
       - name: Install Dependencies
-        run: npm ci  # Use `npm install` if package-lock.json is not present
+        run: npm install
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v3
